[package]
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"
name = "egui-wgpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.3.0", features = ["serde"] }
wgpu = "0.6.0"
bytemuck = { version = "1.4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8.1"
log = "0.4.11"
bincode = "1.3.1"


[build-dependencies]
shaderc = "0.6.3"
